# patchbay

./: CMakeLists.txt  README.md
Source/: Main.cpp
Source/App/: MainWindow.cpp  MainWindow.h
Source/Engine/: ExternalPluginManager.cpp  ExternalPluginManager.h  ModuleNode.h  NodeFactory.cpp  NodeFactory.h  PatchGraph.cpp  PatchGraph.h  TrackEngine.cpp  TrackEngine.h
Source/Modules/: ExampleModules.cpp  ExampleModules.h  ExternalPluginModule.cpp  ExternalPluginModule.h  ModuleCores.cpp  ModuleCores.h
Source/Plugin/: ModulePluginEditor.cpp  ModulePluginEditor.h  ModulePluginProcessor.cpp  ModulePluginProcessor.h
Source/UI/: MainComponent.cpp  MainComponent.h  PatchCanvas.cpp  PatchCanvas.h  TrackView.cpp  TrackView.h
docs/: ARCHITECTURE.md
